components/Organisms/home/body.module.css
/*service*/
.service {
  background-color: #f7f7f7;
  padding: 30px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
}

.service__list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-content: flex-start;
  justify-content: center;
  width: 70%;
  list-style: none;
}

.service__list li {
  background-color: #eff0f0;
  height: 300px;
  width: 300px;
  margin: 10px;
  padding: 20px;
}

.service__list h3 {
  font-size: 24px;
  font-weight: 500;
  color: #555555;
  flex: 1;
}

.service__list p {
  font-size: 13px;
  font-weight: 400;
  line-height: 24px;
  color: #555555;
  padding-top: 150px;
}

.service__title {
  width: 30%;
  text-align: start;
  padding: 0 30px 30px 0;
}

.service__title h2 {
  font-weight: 700;
  font-size: 56px;
  color: var(--light-brand-color);
}

.service__title p {
  font-size: 13px;
  font-weight: 400;
  color: #222222;
  line-height: 20px;
}

/*point*/
.point {
  display: flex;
  flex-direction: row;
  padding: 30px;
}

.point__image {
  width: 50%;
}

.point__text {
  width: 40%;
  padding: 30px 30px 50px 50px;
}

.point__text h2 {
  font-size: 56px;
  font-weight: 700;
  color: var(--light-brand-color);
  line-height: 56px;
}

.point__text h3 {
  font-size: 20px;
  font-weight: 500;
  color: #222222;
  line-height: 30px;
  padding: 1em 0;
}

.point__text p {
  font-size: 13px;
  font-weight: 400;
  color: #222222;
  line-height: 20px;
}

/*project*/
.project {
  background: linear-gradient(
    335deg,
    #fcfc4e 0%,
    #fcfc4e 45%,
    #f7f7f7 45%,
    #f7f7f7 100%
  );
  padding: 30px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
}

.project__list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-content: flex-start;
  justify-content: center;
  width: 70%;
  list-style: none;
}

.project__list li {
  background-color: #eff0f0;
  height: 300px;
  width: 300px;
  margin: 10px;
  padding: 20px;
  background-color: #999999;
}

.project__list h3 {
  font-size: 15px;
  font-weight: 500;
  color: white;
  flex: 1;
}

.project__list h4 {
  font-size: 13px;
  font-weight: 400;
  line-height: 24px;
  color: white;
  padding-top: 100px;
}

.project__list p {
  font-size: 10px;
  font-weight: 400;
  line-height: 24px;
  color: white;
}

.project__title {
  width: 30%;
  text-align: start;
  padding: 0 30px 30px 0;
}

.project__title h2 {
  font-weight: 700;
  font-size: 56px;
  color: var(--light-brand-color);
}

.project__title p {
  font-size: 13px;
  font-weight: 500;
  color: #222222;
  line-height: 20px;
}

@media screen and (max-width: 990px) {
  .service__list {
    width: 100%;
  }

  .project__title {
    width: 100%;
  }

  .project__list {
    width: 100%;
  }

  .service__title {
    width: 100%;
    padding-left: 0;
  }
}

@media screen and (max-width: 950px) {
  .point {
    flex-direction: column;
    padding: 50px 30px;
  }

  .point__image {
    display: none;
  }

  .point__text {
    width: 100%;
  }
}

@media screen and (max-width: 750px) {
  /*service*/
  .service__item__textbox {
    display: block;
    overflow: hidden;
    white-space: normal;
    height: 300px;
  }

  .service__list {
    display: block;
    overflow-x: auto;

    white-space: nowrap;
    -webkit-overflow-scrolling: touch;
  }

  .service__list li {
    display: inline-block;
  }

  /*project*/
  .project__list {
    display: block;
    overflow-x: auto;
    white-space: nowrap;
    -webkit-overflow-scrolling: touch;
  }

  .project__list div {
    display: block;
    overflow: hidden;
    white-space: normal;
    height: 300px;
  }

  .project__list h4 {
    padding-top: 130px;
  }

  .project__list li {
    display: inline-block;
    width: 80%;
  }
}

